fixed the broken style. WIP: need to fix the display/hide the list

--- a/frontend/src/components/UserHome/NotebookListMaker.css
+++ b/frontend/src/components/UserHome/NotebookListMaker.css
@@ -1,3 +1,6 @@
+.side_list.nb_box {
+  overflow-y: unset;
+}
 .nb_box label {
   display: block;
   margin: 1.5px 0;
